This is for testing

--- a/test1.css
+++ b/test1.css
@@ -1,3 +1,4 @@
+
 * {
           box-sizing: border-box;
         }
@@ -5,89 +6,130 @@
         body {
           margin: 0px;
           font-family: 'segoe ui';
-          background-image: url("img/bg-home-services-1.jpg");   
+          background-image:url("img/bg-home-services-1.jpg");
           background-size: cover;
           background-repeat: no-repeat;
           padding:10px;
         }
         
-        .nav {
-          height: 50px;
+        .nav1 {
+          height: 100px;
           width: 100%;
           background-color: #706d6d;
           position: relative;
-          background-color: #f4f4f4;
-	-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+          background-color: #d3cecebc;
+	        -webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
 	box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
+  padding:20px;
+
         }
         
-        .nav > .nav-header {
+        .nav1 > .nav-header {
           display: inline;
         }
         
-        .nav > .nav-header > .nav-title {
+        .nav1 > .nav-header > .nav-title {
           display: inline-block;
           font-size: 22px;
           color: rgb(10, 4, 4);
           padding: 10px 10px 10px 10px;
           margin:0px;
           text-transform: uppercase;
-          font-size: 20px;
+          font-size: 30px;
           
         }
         
-        .nav > .nav-btn {
+        .nav1 > .nav-btn {
           display: none;
         }
         
-        .nav > .nav-links {
+        .nav1 > .nav-links {
           display: inline;
           float: right;
-          font-size: 18px;
+          font-size: 25px;
+          
         }
         
-        .nav > .nav-links > a {
+        .nav1 > .nav-links > a {
           display: inline-block;
           padding: 13px 10px 13px 10px;
           text-decoration: none;
           color: #070303;
         }
         
-        .nav > .nav-links > a:hover {
+        .nav1 > .nav-links > a:hover {
           background-color: rgba(240, 148, 148, 0.3);
+          border: 2px solid red;
         }
         
-        .nav > #nav-check {
+        .nav1 > #nav-check {
           display: none;
         }
-        
+        .text{
+          font:bold 5rem 'Helvetica', Sans-serif;
+          text-align: center;
+          background-color: #eee;
+          -webkit-background-clip: text;
+          color: transparent;
+          
+        }
+
+        .content{
+          font-size: 10px;
+          margin: 20px;
+          padding: 10px;
+        }
+        .content a{
+          text-decoration: none;
+        }
+        .content h1{
+          align-items: center;
+          margin: 25px;
+         
+        }
+        .card img{
+          width:700px;
+        }
+       
+        .description{
+          background-color: rgba(245, 222, 179, 0.65);
+          margin: 10px 0px 0px 300px;
+          width:70%;
+          padding: 20px;
+          
+
+        }
+        .description ul{
+          align-items: center;
+        }
+
         @media (max-width:600px) {
-          .nav > .nav-btn {
+          .nav1 > .nav-btn {
             display: inline-block;
             position: absolute;
             right: 0px;
             top: 0px;
           }
-          .nav > .nav-btn > label {
+          .nav1 > .nav-btn > label {
             display: inline-block;
             width: 50px;
             height: 50px;
             padding: 13px;
           }
-          .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
+          .nav1 > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
             background-color: rgba(0, 0, 0, 0.3);
           }
-          .nav > .nav-btn > label > span {
+          .nav1 > .nav-btn > label > span {
             display: block;
             width: 25px;
             height: 10px;
             border-top: 2px solid #eee;
           }
-          .nav > .nav-links {
+          .nav1 > .nav-links {
             position: absolute;
             display: block;
             width: 100%;
@@ -98,15 +140,17 @@
             top: 50px;
             left: 0px;
           }
-          .nav > .nav-links > a {
+          .nav1 > .nav-links > a {
             display: block;
             width: 100%;
           }
-          .nav > #nav-check:not(:checked) ~ .nav-links {
+          .nav1 > #nav-check:not(:checked) ~ .nav-links {
             height: 0px;
           }
-          .nav > #nav-check:checked ~ .nav-links {
+          .nav1 > #nav-check:checked ~ .nav-links {
             height: calc(100vh - 50px);
             overflow-y: auto;
           }
         }
+
+        
